Made ProcessRunner log console output; Re-ordered AppConfig lines